8266931: [lworld] [lw3] Test InlineTypeArrays.java fails because of incorrect instanceof behavior

Reviewed-by: dsimms